This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.

VersionX 2.3.2-pl
-----------------
Released on 2020-06-25

- Fix several XSS vulnerabilities in the VersionX tabs (resources and templates, where the attack is in the rendered name) and the compare versions view in any non-content field.
- Fix incorrect assets path on the namespace [#116]

VersionX 2.3.1-pl
-----------------
Released on 2020-04-06

- Lower minimum required PHP version to 7.1

VersionX 2.3.0-pl
-----------------
Released on 2020-02-07

- Compatible with MODX 3 (alpha2+) - will likely receive another upgrade in the future improving styling to match 3.x.
- Prevent installation when server requirements are not met
- Fix detail grids showing narrow columns in MODX 3

VersionX 2.2.2-pl
-----------------
Released on 2019-08-22

- VersionX now requires PHP 7.1+ and MODX 2.6+
- Hide users dropdown if user lacks view_user permission [#96]
- Fix forms returning to the first tab on save when the VersionX tab is added [#74]
- Show proper error message when trying to view a non-existent version [#106]
- Fix filtering on the element/resource view [#94]
- Mark the Filter buttons as primary to make them stand out more
- Fix published on date and introtext not showing on the resource detail view [#100]

VersionX 2.2.1-pl
-----------------
Released on 2018-12-17

- Fix the dashboard widget causing an E_FATAL and not using the right links

VersionX 2.2.0-pl
-----------------
Released on 2018-12-14

- #105 Update component to make use of namespace-based routing instead of modAction
- Refactor single index controller into separate controllers for each view
- Refactor flat file processors to class based processors
- Cleanup old processor files during installation
- Use MODx.loadPage instead of window.location for opening links to allow middle click in 2.7
- Cleanup of various legacy (VersionX.action, $versionx->getAction)